<resources>
    <string name="app_name">Samachar</string>

    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="no_internet">No Connection!</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="no_articles">No Articles Found!</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="menu_refresh">Refresh</string>
    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">News Settings</string>
    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_relevance_value</string>
    <!-- Label for order-by relevance option [CHAR LIMIT=20] -->
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>
    <!-- Label for order-by newest option [CHAR LIMIT=20] -->
    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>
    <!-- Label for order-by newest option [CHAR LIMIT=20] -->
    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>
    <!-- Strings For Amount of Articles [CHAR LIMIT=30] -->
    <string name="settings_page_size_label">No. of Articles</string>
    <string name="settings_page_size_key" translatable="false">page_size</string>
    <string name="settings_page_size_default" translatable="false">@string/settings_page_size_twentyfive_value</string>
    <!-- Label for 10 articles [CHAR LIMIT=20] -->
    <string name="settings_page_size_ten_label">10</string>
    <string name="settings_page_size_ten_value" translatable="false">10</string>
    <!-- Label for 25 articles [CHAR LIMIT=20] -->
    <string name="settings_page_size_twentyfive_label">25</string>
    <string name="settings_page_size_twentyfive_value" translatable="false">25</string>
    <!-- Label for 50 articles [CHAR LIMIT=20] -->
    <string name="settings_page_size_fifty_label">50</string>
    <string name="settings_page_size_fifty_value" translatable="false">50</string>
    <string name="categories">Categories</string>


</resources>
